# axum_sqlx_sample

./: Cargo.toml  schema.sql
src/: dbpool.rs  main.rs  message.rs
