[package]
name = "axum_sqlx_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.*", features = [ "runtime-tokio-rustls", "postgres"] }
axum = { version ="0.6.19", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.1.*", features = ["serde"] }
once_cell = "1.18.0"
